aks/dapr/test/zipkin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
  namespace: otokoc-apps
  annotations:
    ingress.class: "nginx"    
    proxy-buffering: "on"
    proxy-buffer-size: "128k"
    proxy-buffers-number: "4"
spec:
  tls: 
  - hosts:
      - zipkin-dev.otokoc.com.tr
    secretName: tls-otokoc
  ingressClassName: nginx
  rules:
  - host: zipkin-dev.otokoc.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipkin
            port:
              number: 9411
